--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
             transform: translateY(10px);
             transition: all 0.5s ease;
         }
+        .link-a {
+            text-decoration: none
+        }
         .stat.visible {
             opacity: 1;
             transform: translateY(0);
@@ -166,16 +169,22 @@
         <h1>rathod_akash_0079</h1>
         <div class="stats">
             <div class="stat">
-                <strong id="posts">1</strong>
-                <div>posts</div>
+                <a class="link-a" href="https://www.instagram.com/rathod_akash_0079/" target="_blank">
+                    <strong id="posts">0</strong>
+                    <div>posts</div>
+                </a>
             </div>
             <div class="stat">
-                <strong id="followers">255</strong>
-                <div>followers</div>
+                <a class="link-a" href="https://www.instagram.com/rathod_akash_0079/followers/" taget="_blank">
+                    <strong id="followers">369</strong>
+                    <div>followers</div>
+                </a>
             </div>
             <div class="stat">
-                <strong id="following">210</strong>
-                <div>following</div>
+                <a class="link-a" href="https://www.instagram.com/rathod_akash_0079/following/" taget="_blank">
+                    <strong id="following">132</strong>
+                    <div>following</div>
+                </a>                
             </div>
         </div>
         <div class="bio" id="bio">
