--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 <body>
     <div id="typing-effect"></div>
     <div class="container">
-        <a href="https://www.instagram.com/stories/rathod_akash_0079/"><img src="https://cdn.inflact.com/media/459227254_541664411766101_6081830725861613008_n.jpg?url=https%3A%2F%2Fscontent.cdninstagram.com%2Fv%2Ft51.2885-19%2F459227254_541664411766101_6081830725861613008_n.jpg%3Fstp%3Ddst-jpg_e0_s150x150%26_nc_ht%3Dscontent-arn2-1.cdninstagram.com%26_nc_cat%3D105%26_nc_ohc%3DRPpNpV4eqdkQ7kNvgF2dada%26_nc_gid%3D5d542379da074b64a4af7b118071dbc8%26edm%3DAOQ1c0wBAAAA%26ccb%3D7-5%26oh%3D00_AYBA9z1PAUW2fbzAueRXnAflhVkwze0nL7jr894FA78GvA%26oe%3D672ACDF8%26_nc_sid%3D8b3546&time=1730476800&key=02090d0377c5f4010cdf690fcad15c09" alt="Profile Picture" class="profile-pic"></a>
+        <a href="https://www.instagram.com/stories/rathod_akash_0079/"><img src="https://cdn.discordapp.com/attachments/1090845105063215144/1302183475276808213/459227254_541664411766101_6081830725861613008_n.jpg?ex=6727305d&is=6725dedd&hm=dd664c373d4cdf6e39a1f70b123e4bfae04f56ef7b646c24ed563955a03e5996&" alt="Profile Picture" class="profile-pic"></a>
         <h1>rathod_akash_0079</h1>
         <div class="stats">
             <div class="stat">
