--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
             transition: all 0.5s ease;
         }
         .link-a {
-            text-decoration: none
+            text-decoration: none;
+            color: black;
         }
         .stat.visible {
             opacity: 1;
