--- a/index.html
+++ b/index.html
@@ -166,24 +166,24 @@
 <body>
     <div id="typing-effect"></div>
     <div class="container">
-        <a href="https://www.instagram.com/stories/rathod_akash_0079/"><img src="https://cdn.discordapp.com/attachments/1090845105063215144/1302183475276808213/459227254_541664411766101_6081830725861613008_n.jpg?ex=6727305d&is=6725dedd&hm=dd664c373d4cdf6e39a1f70b123e4bfae04f56ef7b646c24ed563955a03e5996&" alt="Profile Picture" class="profile-pic"></a>
+        <a href="https://www.instagram.com/stories/rathod_akash_0079/"><img src="/My_Insta_Logo.jpg" alt="Profile Picture" class="profile-pic"></a>
         <h1>rathod_akash_0079</h1>
         <div class="stats">
             <div class="stat">
                 <a class="link-a" href="https://www.instagram.com/rathod_akash_0079/" target="_blank">
-                    <strong id="posts">0</strong>
+                    <strong id="posts">1</strong>
                     <div>posts</div>
                 </a>
             </div>
             <div class="stat">
                 <a class="link-a" href="https://www.instagram.com/rathod_akash_0079/followers/" taget="_blank">
-                    <strong id="followers">369</strong>
+                    <strong id="followers">258</strong>
                     <div>followers</div>
                 </a>
             </div>
             <div class="stat">
                 <a class="link-a" href="https://www.instagram.com/rathod_akash_0079/following/" taget="_blank">
-                    <strong id="following">132</strong>
+                    <strong id="following">223</strong>
                     <div>following</div>
                 </a>                
             </div>
@@ -202,7 +202,7 @@
                 <img src="https://telegram.org/img/t_logo.svg" alt="Telegram">
                 Telegram
             </a>
-            <a href="mailto:rathodakashr79@gmail.com" class="button gmail">
+            <a href="mailto:rathodakashg0@gmail.com" class="button gmail">
                 <img src="https://www.gstatic.com/images/branding/product/1x/gmail_2020q4_32dp.png" alt="Gmail">
                 Gmail
             </a>
