--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 <body>
     <div id="typing-effect"></div>
     <div class="container">
-        <a href="https://www.instagram.com/stories/rathod_akash_0079/"><img src="/My_Insta_Logo.jpg" alt="Profile Picture" class="profile-pic"></a>
+        <a href="https://www.instagram.com/stories/rathod_akash_0079/"><img src="/Insta_Logo.jpg" alt="Profile Picture" class="profile-pic"></a>
         <h1>rathod_akash_0079</h1>
         <div class="stats">
             <div class="stat">
