--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <div id="typing-effect"></div>
     <div class="container">
         <a href="https://www.instagram.com/stories/rathod_akash_0079/"><img src="/My_Insta_Logo.jpg" alt="Profile Picture" class="profile-pic"></a>
-        <h1>rathod_akash_0079</h1>
+        <h1>sanjaythakor1611</h1>
         <div class="stats">
             <div class="stat">
                 <a class="link-a" href="https://www.instagram.com/rathod_akash_0079/" target="_blank">
